[Fix] Spacing bw links in bottom footer

--- a/styles.css
+++ b/styles.css
@@ -248,8 +248,9 @@ ul a {
   padding-top: 25px;
 }
 .pages a {
-  text-decoration: none;
   color: white;
+  text-decoration: none;
+  padding: 0 7.5px;
 }
 .copyright {
   padding-top: 5px;
